--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,11 @@
             <version>2.8.6</version>
         </dependency>
         <dependency>
+            <groupId>com.gilecode.yagson</groupId>
+            <artifactId>yagson</artifactId>
+            <version>0.5.1</version>
+        </dependency>
+        <dependency>
             <groupId>net.sf.opencsv</groupId>
             <artifactId>opencsv</artifactId>
             <version>2.0</version>
